a11y: Fix the order of events

https://bugzilla.gnome.org/show_bug.cgi?id=372777